--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,9 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= Sentry.get_trace_propagation_meta.html_safe %>
+    <% if Rails.env.production? %>
+      <%= Sentry.get_trace_propagation_meta.html_safe %>
+    <% end %>
   </head>
 
   <body>
@@ -29,7 +31,7 @@
         <% end %>
       </div>
     <% end %>
-    
+
     <%= yield %>
   </body>
 </html>
