Close edit modal when overlay is clicked
Remove unnecessary dataset action check in modal close method. Update
modal overlay to use click event for closing, ensuring consistent modal
dismissal behavior.

--- a/app/views/puzzles/edit.html.erb
+++ b/app/views/puzzles/edit.html.erb
@@ -1,6 +1,5 @@
-
 <turbo-frame id="modal">
-  <div data-controller="modal" data-action="modal#close"class="modal-overlay">
+  <div data-controller="modal" data-action="click->modal#close"class="modal-overlay">
     <div data-modal-target="content"
         class="modal-content"
         onclick="event.stopPropagation()">
