Update homepage with rules

--- a/app/views/puzzles/login.html.erb
+++ b/app/views/puzzles/login.html.erb
@@ -1,11 +1,51 @@
 <% @title = "Ruby or Rails Login" %>
 
 <body class="login">
-  <div class="container">
-    <h2>Log In</h2>
-    <div>
-      <p>Log in to access the Ruby or Rails admin panel.</p>
-      <a href="/auth/google_oauth2" class="btn">Login with Google</a>
+  <h1>It is Ruby or Rails Discord Puzzle</h1>
+
+  <div class="intro-text">
+    <p><strong>Have you ever wondered whether something is Ruby or Rails? We have. A lot.</strong></p>
+    <p>
+      <strong>Is It Ruby or Rails?</strong> is a game to test your Ruby knowledge brought to you by FastRuby.io.
+    </p>
+  </div>
+
+  <div class="how-to-play-container">
+    <div class="game-details">
+      <h3>How to Play</h3>
+      <p>
+        Every day, a new puzzle is sent to a defined channel, and members get to answer the "Ruby or Rails?" question. At the end of each week, we'll share a leaderboard so you know who's the Ruby master of the week!
+      </p>
+      <p>Each puzzle shows a Ruby-related code snippet or method.</p>
+      <p>Decide whether it comes from core Ruby or from Rails.</p>
+      <p>Review the explanation to sharpen your understanding and share the fun.</p>
+    </div>
+  </div>
+
+  <div class="login-bottom-row">
+    <div class="container login-box">
+      <h2>Log In</h2>
+      <div>
+        <p>Log in to access the Ruby or Rails admin panel.</p>
+        <a href="/auth/google_oauth2" class="btn">Login with Google</a>
+      </div>
+    </div>
+    <div class="container login-box">
+      <h2>About</h2>
+      <div>
+        <p>
+          Created by us at <a href="https://www.fastruby.io" target="_blank" rel="noopener noreferrer">FastRuby.io</a>
+        </p>
+      </div>
+    </div>
+    <div class="container login-box">
+      <h2>Source</h2>
+      <div>
+        <p>
+          Explore the source on
+          <a href="https://github.com/fastruby/ruby_or_rails" target="_blank" rel="noopener noreferrer">GitHub</a>.
+        </p>
+      </div>
     </div>
   </div>
 </body>
